# fastapi-react-template

./: docker-compose.yml
backend/: .gitignore  Dockerfile  README.md  __init__.py  add_exception_handlers.py  alembic.ini  api.py  config.py  docker-compose.yml  entrypoint.sh  main.py  mongodb.py  pyproject.toml
backend/auth/: backend.py  consts.py  db.py  deps.py  exceptions.py  manager.py  managers.py  models.py  oauth.py  repository.py  router.py  schemas.py  users.py
backend/auth/security/: dtos.py  gateway.py
backend/auth/tokens/: __init__.py  config.py  dtos.py  gateway.py  jwt.py
backend/auth/usecases/: __init__.py  authenticate.py  tokens.py
backend/contract/: deps.py  exceptions.py  mappers.py  models.py  repository.py  router.py  schemas.py
backend/core/: exceptions.py  mappers.py  repository.py  sqlalchemy.py
backend/core/alembic/: env.py
backend/core/alembic/versions/: 3584dc5aeaa4_update_models.py  429fbe7b6da4_add_profile_model.py  42ad64787c06_add_user_profile_model.py  5383aa742dc6_added_users.py  76acca4254f5_add_contract_models.py  76c39683d48e_update_message.py  a4cf4333bf4f_update_models.py  (+5 more)
backend/messenger/: deps.py  exceptions.py  mappers.py  models.py  repository.py  router.py  schemas.py
backend/messenger/router/: __init__.py  chats.py  messages.py
backend/messenger/usecases/: __init__.py  chats.py  messages.py
backend/users/: deps.py  exceptions.py  mappers.py  models.py  repository.py  router.py  schemas.py
backend/users/security/: __init__.py  bcrypt.py  gateway.py
backend/users/usecases/: __init__.py  profiles.py  users.py
backend/ws/: deps.py  handlers.py  managers.py  models.py  router.py  schemas.py
backend/ws/events/: __init__.py  auth.py
backend/ws/usecases/: updates.py
(+40 files in other folders)
